--- a/AnimalIdentifier_Base/AnimalIdentifier_Base.csproj
+++ b/AnimalIdentifier_Base/AnimalIdentifier_Base.csproj
@@ -45,7 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Cat.cs" />
+    <Compile Include="DogOrCat.cs" />
+    <Compile Include="Dog.cs" />
     <Compile Include="ImageTagger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
