--- a/AnimalIdentifier_Base/AnimalIdentifier_Base.csproj
+++ b/AnimalIdentifier_Base/AnimalIdentifier_Base.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Animal.cs" />
     <Compile Include="Bird.cs" />
     <Compile Include="CallAnimal.cs" />
+    <Compile Include="confidenceCheck.cs" />
     <Compile Include="Dog.cs" />
     <Compile Include="ImageTagger.cs" />
     <Compile Include="Program.cs" />
