--- a/AnimalIdentifier_Base/AnimalIdentifier_Base.csproj
+++ b/AnimalIdentifier_Base/AnimalIdentifier_Base.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TagData.cs" />
+    <Compile Include="tagIterator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
